Lots of fixes and improvements.
  * client-netty and client-core removed (no longer needed)
  * RPC mechanism completely replaced by DBus implementation
  * Working CLI tool
  * Many fixes for Windows client and general reliability
  * DNS updating
  * "Route All" option
  * Up/Down Pre/Post commands
  * Bootstrap update