@@ -1,24 +1,27 @@
 package com.logonbox.vpn.client.gui.jfx;
 
+import java.awt.Graphics2D;
+import java.awt.image.BufferedImage;
 import java.io.File;
 import java.io.FileNotFoundException;
 import java.io.FileOutputStream;
+import java.io.IOException;
 import java.io.InputStream;
 import java.io.OutputStream;
-import java.io.PrintWriter;
 import java.io.StringReader;
-import java.io.StringWriter;
 import java.net.InetAddress;
 import java.net.URI;
 import java.net.URL;
+import java.net.URLConnection;
+import java.net.UnknownHostException;
 import java.rmi.RemoteException;
 import java.text.MessageFormat;
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.Base64;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.HashMap;
-import java.util.HashSet;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
@@ -26,40 +29,37 @@ import java.util.MissingResourceException;
 import java.util.Objects;
 import java.util.Optional;
 import java.util.ResourceBundle;
-import java.util.Set;
-import java.util.function.Predicate;
 
-import javax.xml.bind.DatatypeConverter;
+import javax.imageio.ImageIO;
 
-import org.apache.commons.io.FilenameUtils;
 import org.apache.commons.io.IOUtils;
 import org.apache.commons.lang3.StringUtils;
 import org.apache.commons.lang3.SystemUtils;
 import org.controlsfx.control.action.Action;
+import org.freedesktop.dbus.connections.impl.DBusConnection;
+import org.freedesktop.dbus.exceptions.DBusException;
+import org.freedesktop.dbus.interfaces.DBusSigHandler;
 import org.ini4j.Ini;
 import org.ini4j.Profile.Section;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.w3c.dom.Document;
 import org.w3c.dom.Element;
-import org.w3c.dom.NamedNodeMap;
-import org.w3c.dom.Node;
-import org.w3c.dom.NodeList;
 
-import com.hypersocket.HypersocketVersion;
-import com.hypersocket.extensions.JsonExtensionPhase;
-import com.hypersocket.extensions.JsonExtensionPhaseList;
-import com.logonbox.vpn.client.gui.jfx.Bridge.Listener;
-import com.logonbox.vpn.common.client.Branding;
-import com.logonbox.vpn.common.client.ConfigurationService;
-import com.logonbox.vpn.common.client.Connection;
-import com.logonbox.vpn.common.client.ConnectionService;
+import com.fasterxml.jackson.core.JsonProcessingException;
+import com.fasterxml.jackson.databind.JsonMappingException;
+import com.fasterxml.jackson.databind.ObjectMapper;
+import com.hypersocket.json.version.HypersocketVersion;
+import com.logonbox.vpn.common.client.AbstractDBusClient;
+import com.logonbox.vpn.common.client.AbstractDBusClient.BusLifecycleListener;
+import com.logonbox.vpn.common.client.ConfigurationRepository;
 import com.logonbox.vpn.common.client.ConnectionStatus;
 import com.logonbox.vpn.common.client.ConnectionStatus.Type;
-import com.logonbox.vpn.common.client.GUICallback;
 import com.logonbox.vpn.common.client.Keys;
-import com.logonbox.vpn.common.client.Keys.KeyPair;
 import com.logonbox.vpn.common.client.Util;
+import com.logonbox.vpn.common.client.api.Branding;
+import com.logonbox.vpn.common.client.dbus.VPN;
+import com.logonbox.vpn.common.client.dbus.VPNConnection;
 import com.sshtools.twoslices.Toast;
 import com.sshtools.twoslices.ToastType;
 import com.sshtools.twoslices.ToasterFactory;
@@ -69,7 +69,6 @@ import com.sshtools.twoslices.ToasterSettings.SystemTrayIconMode;
 import javafx.animation.KeyFrame;
 import javafx.animation.Timeline;
 import javafx.application.Platform;
-import javafx.collections.ObservableList;
 import javafx.concurrent.Worker.State;
 import javafx.fxml.FXML;
 import javafx.scene.control.Alert;
@@ -88,11 +87,15 @@ import javafx.scene.layout.VBox;
 import javafx.scene.text.Font;
 import javafx.scene.web.WebEngine;
 import javafx.scene.web.WebView;
+import javafx.stage.Modality;
 import javafx.util.Callback;
 import javafx.util.Duration;
 import netscape.javascript.JSObject;
 
-public class UI extends AbstractController implements Listener {
+public class UI extends AbstractController implements BusLifecycleListener {
+
+	private static final int SPLASH_HEIGHT = 360;
+	private static final int SPLASH_WIDTH = 480;
 
 	/**
 	 * This object is exposed to the local HTML/Javascript that runs in the browse.
@@ -110,22 +113,41 @@ public class UI extends AbstractController implements Listener {
 		}
 
 		public void configure(String usernameHint, String configIniFile) {
-			LOG.info(String.format("Connect user: %s, Config: %s", usernameHint, configIniFile));
+			if (LOG.isDebugEnabled())
+				LOG.debug(String.format("Connect user: %s, Config: %s", usernameHint, configIniFile));
 			UI.this.configure(usernameHint, configIniFile, UI.this.connections.getSelectionModel().getSelectedItem());
+		}
+		
+		public void reset() {
+			UI.this.selectPageForState(false, true);
 		}
 
 		public void connect() {
-			UI.this.connect(UI.this.connections.getSelectionModel().getSelectedItem());
+			VPNConnection selectedItem = UI.this.connections.getSelectionModel().getSelectedItem();
+			UI.this.connect(selectedItem == null ? UI.this.connections.getItems().get(0) : selectedItem);
 		}
 
 		public void editConnection(JSObject o) {
 			Boolean connectAtStartup = (Boolean) o.getMember("connectAtStartup");
 			String server = (String) o.getMember("serverUrl");
-			UI.this.editConnection(connectAtStartup, server, getSelectedConnection());
+			String name = (String) o.getMember("name");
+			UI.this.editConnection(connectAtStartup, name, server, getSelectedConnection());
 		}
 
-		public Connection getConnection() {
+		public VPNConnection getConnection() {
 			return UI.this.getSelectedConnection();
+		}
+		
+		public String getOS() {
+			if (SystemUtils.IS_OS_WINDOWS) {
+				return "windows";
+			} else if (SystemUtils.IS_OS_LINUX) {
+				return "linux";
+			} else if (SystemUtils.IS_OS_MAC_OSX) {
+				return "osx";
+			} else {
+				return "other";
+			}
 		}
 
 		public String getDeviceName() {
@@ -149,7 +171,7 @@ public class UI extends AbstractController implements Listener {
 		}
 
 		public String getUserPublicKey() {
-			Connection connection = getConnection();
+			VPNConnection connection = getConnection();
 			return connection == null ? null : connection.getUserPublicKey();
 		}
 
@@ -188,6 +210,10 @@ public class UI extends AbstractController implements Listener {
 		public void update() {
 			UI.this.update();
 		}
+		
+		public void openURL(String url) {
+			Client.get().getHostServices().showDocument(url);
+		}
 	}
 
 	final static ResourceBundle bundle = ResourceBundle.getBundle(UI.class.getName());
@@ -219,16 +245,19 @@ public class UI extends AbstractController implements Listener {
 	private boolean awaitingRestart;
 	private Branding branding;
 	private Map<String, Collection<String>> collections = new HashMap<>();
-	private List<Connection> connecting = new ArrayList<>();
+	private List<VPNConnection> connecting = new ArrayList<>();
 	private boolean deleteOnDisconnect;
 	private String htmlPage;
 	private String lastErrorMessage;
 	private Throwable lastException;
 	private ResourceBundle pageBundle;
 	private UIState mode = UIState.NORMAL;
+	private File logoFile;
+	private boolean adjustingSelection;
+	private String disconnectionReason;
 
 	@FXML
-	protected ListView<Connection> connections;
+	protected ListView<VPNConnection> connections;
 	@FXML
 	private Hyperlink addConnection;
 	@FXML
@@ -251,238 +280,81 @@ public class UI extends AbstractController implements Listener {
 	private Hyperlink minimize;
 	@FXML
 	private Hyperlink toggleSidebar;
-	private File logoFile;
 
 	public UI() {
 		instance = this;
 	}
 
-	@Override
-	public void bridgeEstablished() {
-
-		LOG.info("Bridge established.");
-
-		/*
-		 * If we were waiting for this, it's part of the update process. We don't want
-		 * the connection continuing
-		 */
-		if (awaitingBridgeEstablish != null) {
-			awaitingRestart = true;
-		} else {
-			reloadState();
-		}
-
-		Platform.runLater(() -> {
-			if (awaitingBridgeEstablish != null) {
-				// Bridge established as result of update, now restart the
-				// client itself
-				resetAwaingBridgeEstablish();
-				setUpdateProgress(100, resources.getString("guiRestart"));
-				new Timeline(new KeyFrame(Duration.seconds(5), ae -> Main.getInstance().restart())).play();
-			} else {
-				String unprocessedUri = Main.getInstance().getUri();
-				if (StringUtils.isNotBlank(unprocessedUri)) {
-					connectToUri(unprocessedUri);
-				} else {
-					initUi(null);
-					selectPageForState(false, Main.getInstance().isConnect());
-				}
-			}
-		});
-	}
-
-	@Override
-	public void bridgeLost() {
-		LOG.info("Bridge lost");
-		Platform.runLater(new Runnable() {
-
-			@Override
-			public void run() {
-				if (awaitingBridgeLoss != null) {
-					// Bridge lost as result of update, wait for it to come back
-					resetAwaingBridgeLoss();
-					setUpdateProgress(100, resources.getString("waitingStart"));
-					awaitingBridgeEstablish = new Timeline(
-							new KeyFrame(Duration.seconds(30), ae -> giveUpWaitingForBridgeEstablish()));
-					awaitingBridgeEstablish.play();
-				} else {
-					connecting.clear();
-					rebuildConnections(null);
-					initUi(null);
-					selectPageForState(true, false);
-				}
-			}
-		});
-
-	}
-
-	public void disconnect(Connection sel) {
+	public void disconnect(VPNConnection sel) {
 		disconnect(sel, null);
 	}
 
-	public void disconnect(Connection sel, String reason) {
+	public void disconnect(VPNConnection sel, String reason) {
 		if (reason == null)
 			LOG.info("Requesting disconnect, no reason given");
 		else
 			LOG.info(String.format("Requesting disconnect, because '%s'", reason));
 
-		try {
-			context.getBridge().getClientService().disconnect(sel, reason);
-		} catch (Exception e) {
-			showError("Failed to disconnect.", e);
-		}
-	}
-
-	@Override
-	public void disconnected(final Connection connection, Exception e) {
-		super.disconnected(connection, e);
-		maybeRunLater(() -> {
-			log.info("Disconnected " + connection + " (delete " + deleteOnDisconnect + ")");
-			if (deleteOnDisconnect) {
-				try {
-					doDelete(connection);
-					initUi(connection);
-				} catch (RemoteException e1) {
-					log.error("Failed to delete.", e);
-				}
-			} else {
-				rebuildConnections(connection);
-			}
-			if (e != null) {
-				showError("Disconnected.", e);
-			} else {
-				selectPageForState(true, false);
+		context.getOpQueue().execute(() -> {
+			try {
+				sel.disconnect(StringUtils.defaultIfBlank(reason, ""));
+			} catch (Exception e) {
+				Platform.runLater(() -> showError("Failed to disconnect.", e));
 			}
 		});
-	}
-
-	@Override
-	public void finishedConnecting(final Connection connection, Exception e) {
-		Platform.runLater(() -> {
-			log.info("Finished connecting " + connection + ". "
-					+ (e == null ? "No error" : "Error occured." + e.getMessage()) + " Foreground is ");
-
-			connecting.remove(connection);
-
-			rebuildConnections(connection);
-			if (e != null) {
-				showError("Failed to connect.", e);
-				notify(e.getMessage(), GUICallback.NOTIFY_ERROR);
-			} else {
-				if (Main.getInstance().isExitOnConnection()) {
-					context.exitApp();
-				} else
-					joinedNetwork();
-			}
-
-			// TODO fix when multiple different connections at possible different times
-
-		});
-		super.finishedConnecting(connection, e);
 	}
 
 	public UIState getMode() {
 		return mode;
 	}
 
-	@Override
-	public void initDone(boolean restart, String errorMessage) {
-		if (errorMessage == null) {
-			if (restart) {
-				LOG.info(String.format("All apps updated, starting restart process " + Math.random()));
-				awaitingBridgeLoss = new Timeline(
-						new KeyFrame(Duration.seconds(30), ae -> giveUpWaitingForBridgeStop()));
-				awaitingBridgeLoss.play();
-			} else {
-				LOG.info(String.format("No restart required, continuing"));
-				resetState();
-			}
-		} else {
-			setUpdateProgress(100, errorMessage);
-			resetState();
-		}
-	}
-
-	@Override
-	public void initUpdate(int apps, UIState currentMode) {
-		if (awaitingRestart)
-			throw new IllegalStateException("Cannot initiate updates while waiting to restart the GUI.");
-		this.mode = UIState.UPDATE;
-		LOG.info(String.format("Initialising update (currently in mode %s). Expecting %d apps", currentMode, apps));
-		appsToUpdate = apps;
-		appsUpdated = 0;
-		selectPageForState(false, false);
-	}
-
-	public void connect(Connection n) {
+	public void connect(VPNConnection n) {
 		try {
-			log.info(String.format("Connect to %s", n.getAddress()));
-			if (n != null) {
-				Type status = context.getBridge().getClientService().getStatus(n);
-				log.info(String.format("  current status is %s", status));
-				if (status == Type.CONNECTED)
-					joinedNetwork();
-				else if (n.isAuthorized())
-					joinNetwork(n);
-				else
-					authorize(n);
+			if (n == null) {
+				addConnection();
+			} else {
+				log.info(String.format("Connect to %s", n.getAddress()));
+				if (n != null) {
+					Type status = Type.valueOf(n.getStatus());
+					log.info(String.format("  current status is %s", status));
+					if (status == Type.CONNECTED || status == Type.CONNECTING || status == Type.DISCONNECTING)
+						selectPageForState(false, false);
+					else if (n.isAuthorized())
+						joinNetwork(n);
+					else
+						authorize(n);
+				}
 			}
 		} catch (Exception e) {
 			showError("Failed to connect.", e);
 		}
 	}
 
-	public void joinNetwork(Connection connection) {
-		setHtmlPage("joining.html");
-		try {
-			context.getBridge().getClientService().connect(connection);
-		} catch (Exception e) {
-			showError("Failed to join VPN.", e);
-		}
-	}
-
-	public void notify(String msg, int type, Action... actions) {
-		ToastType toastType = null;
-		switch (type) {
-		case GUICallback.NOTIFY_WARNING:
-			toastType = ToastType.WARNING;
-			break;
-		case GUICallback.NOTIFY_INFO:
-			toastType = ToastType.INFO;
-			break;
-		case GUICallback.NOTIFY_CONNECT:
-		case GUICallback.NOTIFY_DISCONNECT:
-			toastType = ToastType.INFO;
-			break;
-		case GUICallback.NOTIFY_ERROR:
-			toastType = ToastType.ERROR;
-			break;
-		default:
-			toastType = ToastType.NONE;
-		}
+	public void notify(String msg, ToastType toastType, Action... actions) {
 		Toast.toast(toastType, resources.getString("appName"), msg);
-
 	}
 
 	private Map<String, Object> beansForOptions() {
 		Map<String, Object> beans = new HashMap<>();
 		try {
-			JsonExtensionPhaseList phases = context.getBridge().getClientService().getPhases();
-			beans.put("phases", phases.getResult() == null ? new JsonExtensionPhase[0] : phases.getResult());
+			Map<String, String> phases = context.getDBus().getVPN().getPhases();
+			beans.put("phases", phases.keySet().toArray(new String[0]));
 		} catch (Exception e) {
 			log.warn("Could not get phases.", e);
-			beans.put("phases", new JsonExtensionPhase[0]);
+			beans.put("phases", new String[0]);
 		}
-		beans.put("trayModes",
-				new String[] { ConfigurationService.TRAY_MODE_AUTO, ConfigurationService.TRAY_MODE_COLOR,
-						ConfigurationService.TRAY_MODE_DARK, ConfigurationService.TRAY_MODE_LIGHT,
-						ConfigurationService.TRAY_MODE_OFF });
+		beans.put("trayModes", new String[] { Configuration.TRAY_MODE_AUTO, Configuration.TRAY_MODE_COLOR,
+				Configuration.TRAY_MODE_DARK, Configuration.TRAY_MODE_LIGHT, Configuration.TRAY_MODE_OFF });
 		try {
-			beans.put("trayMode", context.getBridge().getConfigurationService().getValue(ConfigurationService.TRAY_MODE,
-					ConfigurationService.TRAY_MODE_AUTO));
-			beans.put("phase", context.getBridge().getConfigurationService().getValue(ConfigurationService.PHASE, ""));
-			beans.put("automaticUpdates", Boolean.valueOf(context.getBridge().getConfigurationService()
-					.getValue(ConfigurationService.AUTOMATIC_UPDATES, "true")));
+			/* Tray mode stored per-user */
+			String trayMode = Configuration.getDefault().trayModeProperty().get();
+			beans.put("trayMode", trayMode);
+
+			/* Update configuration stored globally in service */
+			beans.put("phase", context.getDBus().getVPN().getValue(ConfigurationRepository.PHASE, ""));
+			beans.put("automaticUpdates", Boolean
+					.valueOf(context.getDBus().getVPN().getValue(ConfigurationRepository.AUTOMATIC_UPDATES, "true")));
+
 		} catch (Exception e) {
 			throw new IllegalStateException("Could not get beans.", e);
 		}
@@ -497,112 +369,348 @@ public class UI extends AbstractController implements Listener {
 	public void setMode(UIState mode) {
 		this.mode = mode;
 		rebuildConnections(getSelectedConnection());
-		selectPageForState(false, false);
+		selectPageForState(false, true);
 	}
 
 	@Override
-	public boolean showBrowser(Connection connection, String uri) {
-		Platform.runLater(() -> setHtmlPage(connection.getUri(false) + uri));
-		return true;
+	public void busInitializer(DBusConnection connection) {
+		LOG.info("Bridge established.");
+
+		try {
+			connection.addSigHandler(VPN.ConnectionAdded.class, new DBusSigHandler<VPN.ConnectionAdded>() {
+				@Override
+				public void handle(VPN.ConnectionAdded sig) {
+					maybeRunLater(() -> {
+						try {
+							VPNConnection selectedConnection = getSelectedConnection();
+							if (selectedConnection == null || selectedConnection.getId() == sig.getId()) {
+								adjustingSelection = true;
+								try {
+									rebuildConnections(selectedConnection);
+								}
+								finally {
+									adjustingSelection = false;
+								}
+								VPNConnection newSelectedConnection = getSelectedConnection();
+								context.getOpQueue().execute(() -> {
+									reloadState(() -> {
+										maybeRunLater(() -> {
+											reapplyColors();
+											reapplyLogo();
+											authorize(newSelectedConnection);
+										});
+									});
+								});
+							} else {
+								rebuildConnections(null);
+								selectPageForState(false, false);
+							}
+						} finally {
+							log.info("Connection added");
+						}
+					});
+				}
+			});
+			connection.addSigHandler(VPN.ConnectionRemoved.class, new DBusSigHandler<VPN.ConnectionRemoved>() {
+				@Override
+				public void handle(VPN.ConnectionRemoved sig) {
+					maybeRunLater(() -> {
+						try {
+							rebuildConnections(null);
+							context.getOpQueue().execute(() -> {
+								reloadState(() -> {
+									maybeRunLater(() -> {
+										reapplyColors();
+										reapplyLogo();
+										selectPageForState(false, false);
+									});
+								});
+							});
+						} finally {
+							log.info("Connection deleted");
+						}
+					});
+				}
+			});
+			connection.addSigHandler(VPN.ConnectionUpdated.class, new DBusSigHandler<VPN.ConnectionUpdated>() {
+				@Override
+				public void handle(VPN.ConnectionUpdated sig) {
+					maybeRunLater(() -> {
+						connections.refresh();
+						selectPageForState(false, false);
+					});
+				}
+			});
+
+			/* On update init */
+			connection.addSigHandler(VPN.UpdateInit.class, new DBusSigHandler<VPN.UpdateInit>() {
+				@Override
+				public void handle(VPN.UpdateInit sig) {
+					maybeRunLater(() -> {
+						if (awaitingRestart)
+							throw new IllegalStateException(
+									"Cannot initiate updates while waiting to restart the GUI.");
+						UI.this.mode = UIState.UPDATE;
+						LOG.info(String.format("Initialising update. Expecting %d apps", sig.getApps()));
+						appsToUpdate = sig.getApps();
+						appsUpdated = 0;
+						selectPageForState(false, false);
+					});
+				}
+			});
+
+			/* On update start */
+			connection.addSigHandler(VPN.UpdateStart.class, new DBusSigHandler<VPN.UpdateStart>() {
+				@Override
+				public void handle(VPN.UpdateStart sig) {
+					maybeRunLater(() -> {
+						LOG.info(String.format("Starting up of %s, expect %d bytes", sig.getApp(),
+								sig.getTotalBytesExpected()));
+						String appName = getAppName(sig.getApp());
+						setUpdateProgress(0, MessageFormat.format(resources.getString("updating"), appName));
+					});
+				}
+			});
+
+			/* On update progress */
+			connection.addSigHandler(VPN.UpdateProgress.class, new DBusSigHandler<VPN.UpdateProgress>() {
+				@Override
+				public void handle(VPN.UpdateProgress sig) {
+					maybeRunLater(() -> {
+						String appName = getAppName(sig.getApp());
+						setUpdateProgress((int) (((double) sig.getTotalSoFar() / sig.getTotalBytesExpected()) * 100d),
+								MessageFormat.format(resources.getString("updating"), appName));
+					});
+				}
+			});
+
+			/* On update failure */
+			connection.addSigHandler(VPN.UpdateComplete.class, new DBusSigHandler<VPN.UpdateComplete>() {
+				@Override
+				public void handle(VPN.UpdateComplete sig) {
+					maybeRunLater(() -> {
+						String appName = getAppName(sig.getApp());
+						setUpdateProgress(100, MessageFormat.format(resources.getString("updated"), appName));
+						appsUpdated++;
+						LOG.info(String.format("Update of %s complete, have now updated %d of %d apps", sig.getApp(),
+								appsUpdated, appsToUpdate));
+					});
+				}
+			});
+
+			/* On update failure */
+			connection.addSigHandler(VPN.UpdateFailure.class, new DBusSigHandler<VPN.UpdateFailure>() {
+				@Override
+				public void handle(VPN.UpdateFailure sig) {
+					maybeRunLater(() -> {
+						LOG.info(String.format("Failed to update app %s. %s", sig.getApp(), sig.getMessage()));
+						UI.this.notify(sig.getMessage(), ToastType.ERROR);
+						if (StringUtils.isBlank(sig.getMessage()))
+							showError(
+									MessageFormat.format(resources.getString("updateFailureNoMessage"), sig.getApp()));
+						else
+							showError(MessageFormat.format(resources.getString("updateFailure"), sig.getApp(),
+									sig.getMessage()));
+					});
+				}
+			});
+
+			/* On update done */
+			connection.addSigHandler(VPN.UpdateDone.class, new DBusSigHandler<VPN.UpdateDone>() {
+				@Override
+				public void handle(VPN.UpdateDone sig) {
+					maybeRunLater(() -> {
+						if (StringUtils.isBlank(sig.getFailureMessage())) {
+							if (sig.isRestart()) {
+								LOG.info(String.format("All apps updated, starting restart process " + Math.random()));
+								awaitingBridgeLoss = new Timeline(
+										new KeyFrame(Duration.seconds(30), ae -> giveUpWaitingForBridgeStop()));
+								awaitingBridgeLoss.play();
+							} else {
+								LOG.info(String.format("No restart required, continuing"));
+								resetState();
+							}
+						} else {
+							setUpdateProgress(100, sig.getFailureMessage());
+							resetState();
+						}
+					});
+				}
+			});
+
+			/*
+			 * Client needs authorizing (first time configuration needed, or connection
+			 * failed with existing configuration)
+			 */
+			connection.addSigHandler(VPNConnection.Authorize.class, new DBusSigHandler<VPNConnection.Authorize>() {
+				@Override
+				public void handle(VPNConnection.Authorize sig) {
+					disconnectionReason = null;
+					VPNConnection connection = context.getDBus().getVPNConnection(sig.getId());
+					maybeRunLater(() -> {
+						setHtmlPage(connection.getUri(false) + sig.getUri());
+					});
+				}
+			});
+			connection.addSigHandler(VPNConnection.Connecting.class, new DBusSigHandler<VPNConnection.Connecting>() {
+				@Override
+				public void handle(VPNConnection.Connecting sig) {
+					disconnectionReason = null;
+					maybeRunLater(() -> {
+						selectPageForState(false, false);
+					});
+				}
+			});
+			connection.addSigHandler(VPNConnection.Connected.class, new DBusSigHandler<VPNConnection.Connected>() {
+				@Override
+				public void handle(VPNConnection.Connected sig) {
+					VPNConnection connection = context.getDBus().getVPNConnection(sig.getId());
+					maybeRunLater(() -> {
+						UI.getInstance().notify(connection.getHostname() + " connected", ToastType.INFO);
+						connecting.remove(connection);
+						connections.refresh();
+						if (Main.getInstance().isExitOnConnection()) {
+							context.exitApp();
+						} else
+							selectPageForState(false, false);
+					});
+				}
+			});
+
+			/* Failed to connect */
+			connection.addSigHandler(VPNConnection.Failed.class, new DBusSigHandler<VPNConnection.Failed>() {
+				@Override
+				public void handle(VPNConnection.Failed sig) {
+					VPNConnection connection = context.getDBus().getVPNConnection(sig.getId());
+					maybeRunLater(() -> {
+						String s = sig.getReason();
+						log.info(String.format("Failed to connect. %s", s));
+						connecting.remove(connection);
+						connections.refresh();
+						showError("Failed to connect.");
+						UI.this.notify(s, ToastType.ERROR);
+					});
+				}
+			});
+
+			/* Disconnected */
+			connection.addSigHandler(VPNConnection.Disconnected.class,
+					new DBusSigHandler<VPNConnection.Disconnected>() {
+						@Override
+						public void handle(VPNConnection.Disconnected sig) {
+							disconnectionReason = sig.getReason();
+							maybeRunLater(() -> {
+								log.info("Disconnected " + sig.getId() + " (delete " + deleteOnDisconnect + ")");
+								VPNConnection connection = context.getDBus().getVPNConnection(sig.getId());
+								connections.refresh();
+								if (deleteOnDisconnect) {
+									try {
+										doDelete(connection);
+										initUi(connection);
+									} catch (RemoteException e1) {
+										log.error("Failed to delete.", e1);
+									}
+									if (StringUtils.isNotBlank(sig.getReason())) {
+										showError("Disconnected. " + sig.getReason());
+									} else {
+										selectPageForState(false, false);
+									}
+								} else {
+									selectPageForState(false, false);
+								}
+							});
+						}
+					});
+
+			/* Disconnecting event */
+			connection.addSigHandler(VPNConnection.Disconnecting.class,
+					new DBusSigHandler<VPNConnection.Disconnecting>() {
+						@Override
+						public void handle(VPNConnection.Disconnecting sig) {
+							disconnectionReason = sig.getReason();
+							maybeRunLater(() -> {
+								log.info("Disconnecting " + connection + " (delete " + deleteOnDisconnect + ")");
+								selectPageForState(false, false);
+							});
+						}
+					});
+
+		} catch (DBusException dbe) {
+			throw new IllegalStateException("Failed to configure.", dbe);
+		}
+
+		Runnable runnable = new Runnable() {
+			public void run() {
+				if (awaitingBridgeEstablish != null) {
+					// Bridge established as result of update, now restart the
+					// client itself
+					resetAwaingBridgeEstablish();
+					setUpdateProgress(100, resources.getString("guiRestart"));
+					new Timeline(new KeyFrame(Duration.seconds(5), ae -> Main.getInstance().restart())).play();
+				} else {
+					String unprocessedUri = Main.getInstance().getUri();
+					if (StringUtils.isNotBlank(unprocessedUri)) {
+						connectToUri(unprocessedUri);
+					} else {
+						initUi(null);
+						selectPageForState(Main.getInstance().isConnect(), false);
+					}
+				}
+			}
+		};
+
+		/*
+		 * If we were waiting for this, it's part of the update process. We don't want
+		 * the connection continuing
+		 */
+		if (awaitingBridgeEstablish != null) {
+			awaitingRestart = true;
+			maybeRunLater(runnable);
+		} else {
+			reloadState(() -> maybeRunLater(runnable));
+		}
 	}
 
 	@Override
-	public void started(final Connection connection) {
-		Platform.runLater(() -> {
-			log.info("Started " + connection);
-			initUi(connection);
+	public void busGone() {
+		LOG.info("Bridge lost");
+		maybeRunLater(() -> {
+			if (awaitingBridgeLoss != null) {
+				// Bridge lost as result of update, wait for it to come back
+				resetAwaingBridgeLoss();
+				setUpdateProgress(100, resources.getString("waitingStart"));
+				awaitingBridgeEstablish = new Timeline(
+						new KeyFrame(Duration.seconds(30), ae -> giveUpWaitingForBridgeEstablish()));
+				awaitingBridgeEstablish.play();
+			} else {
+				connecting.clear();
+				rebuildConnections(null);
+				initUi(null);
+				selectPageForState(false, false);
+			}
 		});
 	}
 
-	@Override
-	public void startingUpdate(String app, long totalBytesExpected) {
-		LOG.info(String.format("Starting up of %s, expect %d bytes", app, totalBytesExpected));
-		String appName = getAppName(app);
-		setUpdateProgress(0, MessageFormat.format(resources.getString("updating"), appName));
-	}
-
-	@Override
-	public void updateComplete(String app, long totalBytesTransfered) {
-		String appName = getAppName(app);
-		setUpdateProgress(100, MessageFormat.format(resources.getString("updated"), appName));
-		appsUpdated++;
-		LOG.info(
-				String.format("Update of %s complete, have now updated %d of %d apps", app, appsUpdated, appsToUpdate));
-	}
-
-	@Override
-	public void updateFailure(String app, String message) {
-		LOG.info(String.format("Failed to update app %s. %s", app, message));
+	protected void joinNetwork(VPNConnection connection) {
 		try {
-			context.getBridge().notify(message, GUICallback.NOTIFY_ERROR);
-		} catch (RemoteException e) {
-			// Not actually remote
+			connection.connect();
+		} catch (Exception e) {
+			showError("Failed to join VPN.", e);
 		}
-		if(StringUtils.isBlank(message))
-			showError(MessageFormat.format(resources.getString("updateFailureNoMessage"), app));
-		else
-			showError(MessageFormat.format(resources.getString("updateFailure"), app, message));
-//		resetState();
-		//context.getOpQueue().execute(() -> context.getBridge().disconnectAll());
-	}
-
-	@Override
-	public void updateProgressed(String app, long sincelastProgress, long totalSoFar, long totalBytesExpected) {
-		String appName = getAppName(app);
-		setUpdateProgress((int) (((double) totalSoFar / totalBytesExpected) * 100d),
-				MessageFormat.format(resources.getString("updating"), appName));
 	}
 
 	protected void addConnection(Boolean connectAtStartup, String unprocessedUri) {
 		try {
-			ConnectionService connectionService = context.getBridge().getConnectionService();
 			URI uriObj = Util.getUri(unprocessedUri);
-			final Connection connection = connectionService.createNew(uriObj);
-			if (sameHostPortPathCheck(null, (conId) -> {
-				try {
-					return connectionService.getConnectionByHostPortAndPath(connection.getHostname(),
-							connection.getPort(), connection.getPath()) != null;
-				} catch (RemoteException e) {
-					throw new IllegalStateException(e.getMessage(), e);
-				}
-			})) {
-				return;
-			}
-			connection.setName(uriObj.toString());
-			connection.setConnectAtStartup(connectAtStartup);
-
-			maybeGenerateKeys(connection);
-
-			Connection connectionSaved = connectionService.add(connection);
-			connections.getItems().add(connectionSaved);
-			connections.getSelectionModel().select(connectionSaved);
-			reloadState();
-			reapplyColors();
-			reapplyLogo();
-			authorize(connectionSaved);
-
+			context.getDBus().getVPN().createConnection(uriObj.toASCIIString(), connectAtStartup);
 		} catch (Exception e) {
 			showError("Failed to add connection.", e);
 		}
 	}
 
-	protected void maybeGenerateKeys(final Connection connection) {
-		/*
-		 * If enabled, generate the private key now on the client, to save the server
-		 * having to do so (and also storing it).
-		 */
-		if (Client.generateKeysClientSide) {
-			log.info("Generating private key");
-			KeyPair key = Keys.genkey();
-			connection.setUserPrivateKey(key.getBase64PrivateKey());
-			connection.setUserPublicKey(key.getBase64PublicKey());
-			log.info(String.format("Public key is %s", connection.getUserPublicKey()));
-		}
-	}
-
-	protected void authorize(Connection n) {
+	protected void authorize(VPNConnection n) {
 		try {
-			context.getBridge().getClientService().requestAuthorize(n);
+			n.authorize();
 		} catch (Exception e) {
 			showError("Failed to join VPN.", e);
 		}
@@ -613,6 +721,8 @@ public class UI extends AbstractController implements Listener {
 		engine.setUserAgent("LogonBox VPN Client " + HypersocketVersion.getVersion());
 		engine.setOnAlert((e) -> {
 			Alert alert = new Alert(AlertType.ERROR);
+			alert.initModality(Modality.APPLICATION_MODAL);
+			alert.initOwner(getStage());
 			alert.setTitle("Alert");
 			alert.setContentText(e.getData());
 			alert.showAndWait();
@@ -625,7 +735,8 @@ public class UI extends AbstractController implements Listener {
 		});
 		engine.locationProperty().addListener((c, oldLoc, newLoc) -> {
 			if (newLoc != null) {
-				if (newLoc.startsWith("http://") || newLoc.startsWith("https://")) {
+				if ((newLoc.startsWith("http://") || newLoc.startsWith("https://"))
+						&& !(newLoc.startsWith(DEFAULT_LOCALHOST_ADDR))) {
 					log.info("This is a remote page, not changing current html page");
 					htmlPage = null;
 				} else {
@@ -640,6 +751,10 @@ public class UI extends AbstractController implements Listener {
 					}
 					if (base.equals(""))
 						base = "index.html";
+					idx = base.indexOf('#');
+					if(idx != -1) {
+						base = base.substring(0, idx);
+					}
 					if (!base.equals("") && !base.equals(htmlPage)) {
 						htmlPage = base;
 						log.info(String.format("Page changed by user to %s (likely back button)", htmlPage));
@@ -650,7 +765,8 @@ public class UI extends AbstractController implements Listener {
 		});
 		engine.getLoadWorker().stateProperty().addListener((ov, oldState, newState) -> {
 			if (newState == State.SUCCEEDED) {
-				webViewReady(newState);
+				processJavascript();
+				processDOM();
 			}
 		});
 		engine.getLoadWorker().exceptionProperty().addListener((o, old, value) -> {
@@ -665,14 +781,20 @@ public class UI extends AbstractController implements Listener {
 			 * 
 			 * So cancel the authorize and show the error and allow retry.
 			 */
-			Connection selectedConnection = getSelectedConnection();
+			VPNConnection selectedConnection = getSelectedConnection();
 			try {
-				if (context.getBridge().getClientService()
-						.getStatus(selectedConnection) == ConnectionStatus.Type.AUTHORIZING) {
+				if (selectedConnection != null && ConnectionStatus.Type
+						.valueOf(selectedConnection.getStatus()) == ConnectionStatus.Type.AUTHORIZING) {
 					String reason = value != null ? value.getMessage() : null;
 					LOG.info(String.format("Got error while authorizing. Disconnecting now using '%s' as the reason",
 							reason));
-					context.getBridge().getClientService().disconnect(selectedConnection, reason);
+					context.getOpQueue().execute(() -> {
+						try {
+							selectedConnection.disconnect(reason);
+						} catch (Exception e) {
+							Platform.runLater(() -> showError("Failed to disconnect.", e));
+						}
+					});
 
 					/*
 					 * Await the disconnected event that comes back from the service and process it
@@ -707,185 +829,25 @@ public class UI extends AbstractController implements Listener {
 		return false;
 	}
 
-	protected void dataAttributes(Element node, Connection cfg, Connection connection,
-			Map<Node, Collection<Node>> newNodes, Set<Node> removeNodes) {
-
-		String errorText = "";
-		String exceptionText = "";
-
-		if (lastException != null) {
-			StringWriter s = new StringWriter();
-			lastException.printStackTrace(new PrintWriter(s, true));
-			exceptionText = s.toString();
-			if (lastErrorMessage == null) {
-				errorText = lastException.getMessage();
-			} else {
-				errorText = lastErrorMessage + " " + lastException.getMessage();
-			}
-		} else if (lastErrorMessage != null) {
-			errorText = lastErrorMessage;
-		}
-
-		String hostname = connection == null ? "" : connection.getHostname();
-		String connectionUri = connection == null ? "" : connection.getUri(false);
-		String port = connection == null ? "" : Integer.toString(connection.getPort());
-		String endpointAddress = cfg == null ? "" : cfg.getEndpointAddress() + ":" + cfg.getEndpointPort();
-		String publicKey = cfg == null ? "" : cfg.getPublicKey();
-		String userPublicKey = cfg == null ? "" : cfg.getUserPublicKey();
-		String address = cfg == null ? "" : cfg.getAddress();
-		String usernameHint = cfg == null ? "" : cfg.getUsernameHint();
-		String connectAtStartup = cfg == null ? "false" : String.valueOf(cfg.isConnectAtStartup());
-		String clientVersion = HypersocketVersion.getVersion();
-		String brand = MessageFormat.format(resources.getString("brand"), ( branding == null || branding.getResource() == null || 
-				StringUtils.isBlank(branding.getResource().getName()) ? "LogonBox" : branding.getResource().getName() ));
-
-		NamedNodeMap attrs = node.getAttributes();
-		for (int i = 0; i < attrs.getLength(); i++) {
-			Node attr = attrs.item(i);
-			String val = attr.getNodeValue();
-			if (attr.getNodeName().startsWith("data-attr-i18n-")) {
-				String attrVal = pageBundle == null ? "?" : pageBundle.getString(val);
-				node.setAttribute(attr.getNodeName().substring(14), attrVal);
-			} else {
-				if (attr.getNodeName().equals("data-attr-value")) {
-					if (val.equals("server"))
-						node.setAttribute(node.getAttribute("data-attr-name"), hostname);
-					else if (val.equals("serverUrl"))
-						node.setAttribute(node.getAttribute("data-attr-name"), connectionUri);
-					else if (val.equals("port"))
-						node.setAttribute(node.getAttribute("data-attr-name"), port);
-					else if (val.equals("connectAtStartup"))
-						node.setAttribute(node.getAttribute("data-attr-name"), connectAtStartup);
-					else if (val.equals("address"))
-						node.setAttribute(node.getAttribute("data-attr-name"), address);
-					else if (val.equals("usernameHint"))
-						node.setAttribute(node.getAttribute("data-attr-name"), usernameHint);
-					else if (val.equals("endpoint"))
-						node.setAttribute(node.getAttribute("data-attr-name"), endpointAddress);
-					else if (val.equals("brand"))
-						node.setAttribute(node.getAttribute("data-attr-name"), brand);
-					else if (val.equals("clientVersion"))
-						node.setAttribute(node.getAttribute("data-attr-name"), clientVersion);
-					else if (val.equals("publicKey"))
-						node.setAttribute(node.getAttribute("data-attr-name"), publicKey);
-					else if (val.equals("userPublicKey"))
-						node.setAttribute(node.getAttribute("data-attr-name"), userPublicKey);
-					else if (val.equals("exception"))
-						node.setAttribute(node.getAttribute("data-attr-name"), exceptionText);
-					else if (val.equals("errorMessage"))
-						node.setAttribute(node.getAttribute("data-attr-name"), errorText);
-				} else if (attr.getNodeName().equals("data-i18n")) {
-					List<Object> args = new ArrayList<>();
-					for (int ai = 0; ai < 9; ai++) {
-						String i18nArg = node.getAttribute("data-i18n-" + ai);
-						if (i18nArg != null) {
-							if (i18nArg.equals("server"))
-								args.add(hostname);
-							else if (i18nArg.equals("serverUrl"))
-								args.add(connectionUri);
-							else if (i18nArg.equals("port"))
-								args.add(port);
-							else if (i18nArg.equals("address"))
-								args.add(address);
-							else if (i18nArg.equals("usernameHint"))
-								args.add(usernameHint);
-							else if (i18nArg.equals("endpoint"))
-								args.add(endpointAddress);
-							else if (i18nArg.equals("clientVersion"))
-								args.add(clientVersion);
-							else if (i18nArg.equals("brand"))
-								args.add(brand);
-							else if (i18nArg.equals("publicKey"))
-								args.add(publicKey);
-							else if (i18nArg.equals("userPublicKey"))
-								args.add(userPublicKey);
-							else if (i18nArg.equals("exception"))
-								args.add(exceptionText);
-							else if (i18nArg.equals("errorMessage"))
-								args.add(errorText);
-						}
-					}
-					String attrVal;
-					try {
-						attrVal = pageBundle.getString(val);
-					} catch (MissingResourceException mre) {
-						attrVal = bundle.getString(val);
-					}
-					if (!args.isEmpty()) {
-						attrVal = MessageFormat.format(attrVal, args.toArray(new Object[0]));
-					}
-					node.setTextContent(attrVal);
-				} else if (attr.getNodeName().equals("data-collection")) {
-					Collection<String> collection = collections.get(val);
-					if (collection == null)
-						log.warn(String.format("No collection named %s", val));
-					else {
-						List<Node> newCollectionNodes = new ArrayList<>();
-						for (String elVal : collection) {
-							Node template = node.cloneNode(false);
-							template.setTextContent(elVal);
-							newCollectionNodes.add(template);
-						}
-						newNodes.put(node.getParentNode(), newCollectionNodes);
-						removeNodes.add(node);
-					}
-				} else if (attr.getNodeName().equals("data-content")) {
-					if (val.equals("server"))
-						node.setTextContent(hostname);
-					else if (val.equals("serverUrl"))
-						node.setTextContent(connectionUri);
-					else if (val.equals("port"))
-						node.setTextContent(port);
-					else if (val.equals("address"))
-						node.setTextContent(address);
-					else if (val.equals("usernameHint"))
-						node.setTextContent(usernameHint);
-					else if (val.equals("endpoint"))
-						node.setTextContent(endpointAddress);
-					else if (val.equals("brand"))
-						node.setTextContent(brand);
-					else if (val.equals("clientVersion"))
-						node.setTextContent(clientVersion);
-					else if (val.equals("publicKey"))
-						node.setTextContent(publicKey);
-					else if (val.equals("userPublicKey"))
-						node.setTextContent(userPublicKey);
-					else if (val.equals("exception"))
-						node.setTextContent(exceptionText);
-					else if (val.equals("errorMessage"))
-						node.setTextContent(errorText);
-				}
-			}
-		}
-
-		NodeList n = node.getChildNodes();
-		for (int i = 0; i < n.getLength(); i++) {
-			Node c = n.item(i);
-			if (c instanceof Element)
-				dataAttributes((Element) c, cfg, connection, newNodes, removeNodes);
-		}
-	}
-
-	protected void editConnection(Boolean connectAtStartup, String server, Connection connection) {
+	protected void editConnection(Boolean connectAtStartup, String name, String server, VPNConnection connection) {
 		try {
-			ConnectionService connectionService = context.getBridge().getConnectionService();
-			connection.setName(server);
 			URI uriObj = Util.getUri(server);
+
+			connection.setName(name);
 			connection.setHostname(uriObj.getHost());
 			connection
 					.setPort(uriObj.getPort() < 1 ? (uriObj.getScheme().equals("https") ? 443 : 80) : uriObj.getPort());
 			connection.setConnectAtStartup(connectAtStartup);
-			Connection connectionSaved = connectionService.save(connection);
-			connections.getSelectionModel().select(connectionSaved);
-			selectPageForState(false, false);
+			if (!connection.isTransient())
+				connection.save();
 
 		} catch (Exception e) {
 			showError("Failed to save connection.", e);
 		}
 	}
 
-	protected Connection getSelectedConnection() {
-		Connection selectedItem = connections.getSelectionModel().getSelectedItem();
+	protected VPNConnection getSelectedConnection() {
+		VPNConnection selectedItem = connections.getSelectionModel().getSelectedItem();
 		if (selectedItem == null && connections.getItems().size() > 0)
 			selectedItem = connections.getItems().get(0);
 		return selectedItem;
@@ -902,27 +864,22 @@ public class UI extends AbstractController implements Listener {
 		toggleSidebar.setVisible(!Main.getInstance().isNoSidebar());
 		toggleSidebar.setManaged(toggleSidebar.isVisible());
 
-		initUi(null);
-		rebuildConnections(getSelectedConnection());
-
 		/*
 		 * Setup the connection list
 		 */
-		Callback<ListView<Connection>, ListCell<Connection>> factory = new Callback<ListView<Connection>, ListCell<Connection>>() {
+		Callback<ListView<VPNConnection>, ListCell<VPNConnection>> factory = new Callback<ListView<VPNConnection>, ListCell<VPNConnection>>() {
 
 			@Override
-			public ListCell<Connection> call(ListView<Connection> l) {
-				return new ListCell<Connection>() {
+			public ListCell<VPNConnection> call(ListView<VPNConnection> l) {
+				return new ListCell<VPNConnection>() {
 
 					@Override
-					protected void updateItem(Connection item, boolean empty) {
+					protected void updateItem(VPNConnection item, boolean empty) {
 						super.updateItem(item, empty);
 						if (item == null) {
 							setText("");
-						} else if (item.getPort() != 443)
-							setText(item.getHostname() + ":" + item.getPort());
-						else
-							setText(item.getHostname());
+						} else
+							setText(item.getDisplayName());
 					}
 				};
 			}
@@ -938,10 +895,17 @@ public class UI extends AbstractController implements Listener {
 			}
 		});
 		connections.getSelectionModel().selectedItemProperty().addListener((e, o, n) -> {
-			reloadState();
-			reapplyColors();
-			reapplyLogo();
-			selectPageForState(false, false);
+			if(!adjustingSelection) {
+				context.getOpQueue().execute(() -> {
+					reloadState(() -> {
+						maybeRunLater(() -> {
+							reapplyColors();
+							reapplyLogo();
+							selectPageForState(false, true);
+						});
+					});
+				});
+			}
 		});
 
 		/* Context menu */
@@ -968,19 +932,22 @@ public class UI extends AbstractController implements Listener {
 		menu.getItems().add(remove);
 		connections.setContextMenu(menu);
 		menu.setOnShowing((e) -> {
-			try {
-				ConnectionStatus.Type type = context.getBridge().getClientService().getStatus(getSelectedConnection());
-				connect.setDisable(type != ConnectionStatus.Type.DISCONNECTED);
-				disconnect.setDisable(
-						type != ConnectionStatus.Type.CONNECTED && type != ConnectionStatus.Type.AUTHORIZING);
-				add.setDisable(false);
-				remove.setDisable(type != ConnectionStatus.Type.DISCONNECTED);
-			} catch (RemoteException e1) {
-				connect.setDisable(false);
-				disconnect.setDisable(false);
-				add.setDisable(false);
-				remove.setDisable(false);
-				showError("Failed to check state.", e1);
+			VPNConnection selectedConnection = getSelectedConnection();
+			if (selectedConnection != null) {
+				try {
+					ConnectionStatus.Type type = Type.valueOf(selectedConnection.getStatus());
+					connect.setDisable(type != ConnectionStatus.Type.DISCONNECTED);
+					disconnect.setDisable(
+							type != ConnectionStatus.Type.CONNECTED && type != ConnectionStatus.Type.AUTHORIZING);
+					add.setDisable(false);
+					remove.setDisable(type != ConnectionStatus.Type.DISCONNECTED);
+				} catch (Exception e1) {
+					connect.setDisable(false);
+					disconnect.setDisable(false);
+					add.setDisable(false);
+					remove.setDisable(false);
+					showError("Failed to check state.", e1);
+				}
 			}
 		});
 
@@ -991,8 +958,12 @@ public class UI extends AbstractController implements Listener {
 		sidebar.managedProperty().bind(sidebar.visibleProperty());
 
 		/* Initial page */
-		if (!context.getBridge().isConnected())
+		try {
+			context.getDBus().addBusLifecycleListener(this);
+			context.getDBus().getVPN().ping();
+		} catch (Exception e) {
 			setHtmlPage("index.html");
+		}
 	}
 
 	@Override
@@ -1002,9 +973,13 @@ public class UI extends AbstractController implements Listener {
 
 	protected void saveOptions(String trayMode, String phase, boolean automaticUpdates) {
 		try {
-			context.getBridge().getConfigurationService().setValue(ConfigurationService.TRAY_MODE, trayMode);
-			context.getBridge().getConfigurationService().setValue(ConfigurationService.PHASE, phase);
-			context.getBridge().getConfigurationService().setValue(ConfigurationService.AUTOMATIC_UPDATES,
+			/* Tray mode stored per-user */
+			Configuration.getDefault().trayModeProperty().set(trayMode);
+
+			/* Update configuration stored globally in service */
+			if (!context.getDBus().getVPN().isTrackServerVersion())
+				context.getDBus().getVPN().setValue(ConfigurationRepository.PHASE, phase);
+			context.getDBus().getVPN().setValue(ConfigurationRepository.AUTOMATIC_UPDATES,
 					String.valueOf(automaticUpdates));
 			selectPageForState(false, false);
 		} catch (Exception e) {
@@ -1030,7 +1005,7 @@ public class UI extends AbstractController implements Listener {
 						URI uri = new URI(htmlPage);
 						Map<String, List<String>> headers = new LinkedHashMap<String, List<String>>();
 						headers.put("Set-Cookie", Arrays.asList(String.format("%s=%s", Client.DEVICE_IDENTIFIER,
-								context.getBridge().getClientService().getUUID().toString())));
+								context.getDBus().getVPN().getUUID())));
 						java.net.CookieHandler.getDefault().put(uri.resolve("/"), headers);
 					} catch (Exception e) {
 						throw new IllegalStateException("Failed to set cookie.", e);
@@ -1049,7 +1024,7 @@ public class UI extends AbstractController implements Listener {
 					 * couldn't get a custom URL handler to work either).
 					 */
 					byte[] localCss = IOUtils.toByteArray(context.getCustomLocalWebCSSFile().toURI());
-					String datauri = "data:text/css;base64," + DatatypeConverter.printBase64Binary(localCss);
+					String datauri = "data:text/css;base64," + Base64.getEncoder().encodeToString(localCss);
 					webView.getEngine().setUserStyleSheetLocation(datauri);
 
 					setupPage();
@@ -1070,7 +1045,8 @@ public class UI extends AbstractController implements Listener {
 							.asList(String.format("%s=%s", Client.LOCBCOOKIE, Client.localWebServerCookie.toString())));
 					java.net.CookieHandler.getDefault().put(uri.resolve("/"), headers);
 
-					LOG.info(String.format("Loading location %s", loc));
+					if (LOG.isDebugEnabled())
+						LOG.debug(String.format("Loading location %s", loc));
 					webView.getEngine().load(loc);
 				}
 
@@ -1081,7 +1057,7 @@ public class UI extends AbstractController implements Listener {
 		}
 	}
 
-	protected void setupPage() {
+	private void setupPage() {
 		if (htmlPage == null || htmlPage.startsWith("http://") || htmlPage.startsWith("https://")) {
 			pageBundle = resources;
 		} else {
@@ -1097,7 +1073,8 @@ public class UI extends AbstractController implements Listener {
 			String res = Client.class.getName();
 			idx = res.lastIndexOf('.');
 			String resourceName = res.substring(0, idx) + "." + base;
-			LOG.info(String.format("Loading bundle %s", resourceName));
+			if (LOG.isDebugEnabled())
+				LOG.debug(String.format("Loading bundle %s", resourceName));
 			try {
 				pageBundle = ResourceBundle.getBundle(resourceName);
 			} catch (MissingResourceException mre) {
@@ -1108,13 +1085,14 @@ public class UI extends AbstractController implements Listener {
 		}
 	}
 
-	protected void webViewReady(State newState) {
-		log.info("Processing page content");
+	private void processJavascript() {
+		if (log.isDebugEnabled())
+			log.debug("Processing page content");
 		JSObject jsobj = (JSObject) webView.getEngine().executeScript("window");
 		jsobj.setMember("bridge", new ServerBridge());
-		jsobj.setMember("configuration", context.getBridge().getConfigurationService());
 		if ("options.html".equals(htmlPage)) {
 			for (Map.Entry<String, Object> beanEn : beansForOptions().entrySet()) {
+				log.info(String.format(" Setting %s to %s", beanEn.getKey(), beanEn.getValue()));
 				jsobj.setMember(beanEn.getKey(), beanEn.getValue());
 			}
 		}
@@ -1123,59 +1101,43 @@ public class UI extends AbstractController implements Listener {
 		webView.getEngine()
 				.executeScript("console.log = function(message)\n" + "{\n" + "    bridge.log(message);\n" + "};");
 
-		try {
-			Connection sel = getSelectedConnection();
-			Element rootEl = webView.getEngine().getDocument().getDocumentElement();
-			Map<Node, Collection<Node>> newNodes = new HashMap<>();
-			Set<Node> removeNodes = new HashSet<>();
-			dataAttributes(rootEl, sel, sel, newNodes, removeNodes);
-			for (Map.Entry<Node, Collection<Node>> en : newNodes.entrySet()) {
-				for (Node n : en.getValue())
-					en.getKey().appendChild(n);
-			}
-			for (Node n : removeNodes)
-				n.getParentNode().removeChild(n);
+	}
 
-			collections.clear();
-			lastException = null;
-			lastErrorMessage = null;
-
-		} catch (Exception e) {
-			showError("Failed to initialise web view. ", e);
-		}
+	private void processDOM() {
+		DOMProcessor processor = new DOMProcessor(getSelectedConnection(), collections, 
+				lastErrorMessage, lastException, branding, 
+				pageBundle, resources, webView.getEngine().getDocument().getDocumentElement(), disconnectionReason);
+		processor.process();
+		collections.clear();
+		lastException = null;
+		lastErrorMessage = null;
 	}
 
 	private void connectToUri(String unprocessedUri) {
-		try {
-			LOG.info(String.format("Connecting to URI %s", unprocessedUri));
-			ConnectionService connectionService = context.getBridge().getConnectionService();
-			URI uriObj = Util.getUri(unprocessedUri);
-			Connection connection = connectionService.createNew(uriObj);
-			Connection conx = connectionService.getConnectionByName(uriObj.toString());
-			if (conx == null) {
-				if (Main.getInstance().isCreateIfDoesntExist()) {
-					/* No existing configuration */
-					connection.setName(uriObj.toString());
-					connection.setConnectAtStartup(true);
-					maybeGenerateKeys(connection);
-					Connection connectionSaved = connectionService.add(connection);
-					connections.getItems().add(connectionSaved);
-					connections.getSelectionModel().select(connectionSaved);
-					reloadState();
-					reapplyColors();
-					reapplyLogo();
-					authorize(connectionSaved);
+		context.getOpQueue().execute(() -> {
+			try {
+				LOG.info(String.format("Connected to URI %s", unprocessedUri));
+				URI uriObj = Util.getUri(unprocessedUri);
+				long connectionId = context.getDBus().getVPN().getConnectionIdForURI(uriObj.toASCIIString());
+				if (connectionId == -1) {
+					if (Main.getInstance().isCreateIfDoesntExist()) {
+						/* No existing configuration */
+						context.getDBus().getVPN().createConnection(uriObj.toASCIIString(), true);
+					} else {
+						showError(MessageFormat.format(bundle.getString("error.uriProvidedDoesntExist"), uriObj));
+					}
 				} else {
-					showError(MessageFormat.format(bundle.getString("error.uriProvidedDoesntExist"), uriObj));
+					reloadState(() -> {
+						maybeRunLater(() -> {
+							initUi(context.getDBus().getVPNConnection(connectionId));
+						});
+					});
 				}
-			} else {
-				reloadState();
-				initUi(conx);
-			}
 
-		} catch (Exception e) {
-			showError("Failed to add connection.", e);
-		}
+			} catch (Exception e) {
+				showError("Failed to add connection.", e);
+			}
+		});
 	}
 
 	private void addConnection() {
@@ -1183,7 +1145,7 @@ public class UI extends AbstractController implements Listener {
 		sidebar.setVisible(false);
 	}
 
-	private void configure(String usernameHint, String configIniFile, Connection config) {
+	private void configure(String usernameHint, String configIniFile, VPNConnection config) {
 		try {
 			LOG.info(String.format("Configuration for %s", usernameHint));
 			Ini ini = new Ini(new StringReader(configIniFile));
@@ -1192,19 +1154,28 @@ public class UI extends AbstractController implements Listener {
 			/* Interface (us) */
 			Section interfaceSection = ini.get("Interface");
 			config.setAddress(interfaceSection.get("Address"));
-			config.setDns(toStringList(interfaceSection, "DNS"));
+			config.setDns(toStringList(interfaceSection, "DNS").toArray(new String[0]));
 
 			String privateKey = interfaceSection.get("PrivateKey");
-			if (privateKey != null && config.getUserPrivateKey().length() > 0
-					&& !privateKey.equals(PRIVATE_KEY_NOT_AVAILABLE)) {
+			if (privateKey != null && config.hasPrivateKey() && !privateKey.equals(PRIVATE_KEY_NOT_AVAILABLE)) {
 				/*
 				 * TODO private key should be removed from server at this point
 				 */
 				config.setUserPrivateKey(privateKey);
-				config.setUserPublicKey(Keys.pubkey(config.getUserPrivateKey()).getBase64PublicKey());
-			} else if (config.getUserPrivateKey() == null || config.getUserPrivateKey().length() == 0) {
+				config.setUserPublicKey(Keys.pubkey(privateKey).getBase64PublicKey());
+			} else if (!config.hasPrivateKey()) {
 				throw new IllegalStateException(
 						"Did not receive private key from server, and we didn't generate one on the client. Connection impossible.");
+			}
+			config.setPreUp(interfaceSection.containsKey("PreUp") ? interfaceSection.get("PreUp") : "");
+			config.setPostUp(interfaceSection.containsKey("PostUp") ? interfaceSection.get("PostUp") : "");
+			config.setPreDown(interfaceSection.containsKey("PreDown") ? interfaceSection.get("PreDown") : "");
+			config.setPostDown(interfaceSection.containsKey("PostDown") ? interfaceSection.get("PostDown") : "");
+			
+			/* Custom LogonBox */
+			Section logonBoxSection = ini.get("LogonBox");
+			if(logonBoxSection != null) {
+				config.setRouteAll("true".equals(logonBoxSection.get("RouteAll")));
 			}
 
 			/* Peer (them) */
@@ -1214,29 +1185,28 @@ public class UI extends AbstractController implements Listener {
 			config.setEndpointAddress(endpoint[0]);
 			config.setEndpointPort(Integer.parseInt(endpoint[1]));
 			config.setPeristentKeepalive(Integer.parseInt(peerSection.get("PersistentKeepalive")));
-			config.setAllowedIps(toStringList(peerSection, "AllowedIPs"));
+			config.setAllowedIps(toStringList(peerSection, "AllowedIPs").toArray(new String[0]));
+			config.save();
 
-			setHtmlPage("joining.html");
-			context.getBridge().getClientService().authorized(config);
+			selectPageForState(false, false);
+			config.authorized();
 
 		} catch (Exception e) {
 			showError("Failed to configure connection.", e);
 		}
 	}
 
-	private boolean confirmDelete(Connection sel) {
+	private boolean confirmDelete(VPNConnection sel) {
 		Alert alert = new Alert(AlertType.CONFIRMATION);
+		alert.initModality(Modality.APPLICATION_MODAL);
+		alert.initOwner(getStage());
 		alert.setTitle(resources.getString("delete.confirm.title"));
 		alert.setHeaderText(resources.getString("delete.confirm.header"));
-		alert.setContentText(MessageFormat.format(resources.getString("delete.confirm.content"), Util.getUri(sel)));
+		alert.setContentText(MessageFormat.format(resources.getString("delete.confirm.content"), sel.getUri(false)));
 		Optional<ButtonType> result = alert.showAndWait();
 		if (result.get() == ButtonType.OK) {
 			try {
-//				if (sel.equals(foregroundConnection)) {
-//					foregroundConnection = null;
-//				}
-				Util.getUri(sel);
-				if (context.getBridge().getClientService().getStatus(sel) == Type.CONNECTED) {
+				if (Type.valueOf(sel.getStatus()) == Type.CONNECTED) {
 					log.info("Disconnecting deleted connection.");
 					deleteOnDisconnect = true;
 					doDisconnect(sel);
@@ -1253,68 +1223,115 @@ public class UI extends AbstractController implements Listener {
 		}
 	}
 
-	private void doDelete(Connection sel) throws RemoteException {
+	private void doDelete(VPNConnection sel) throws RemoteException {
 		setHtmlPage("busy.html");
 		log.info(String.format("Deleting connection %s", sel));
-		context.getBridge().getConnectionService().delete(sel);
-		try {
-			ObservableList<Connection> items = connections.getItems();
-			items.remove(sel);
-			Connection newConnections = items.isEmpty() ? null : items.get(0);
-			sel = newConnections;
-			reloadState();
-			reapplyColors();
-			reapplyLogo();
-			connections.getSelectionModel().clearSelection();
-			rebuildConnections(sel);
-			selectPageForState(false, false);
-		} finally {
-			log.info("Connection deleted");
-		}
+		sel.delete();
 	}
 
-	private void reloadState() {
-		try {
-			mode = context.getBridge().getClientService().isUpdating() ? UIState.UPDATE : UIState.NORMAL;
-			branding = context.getBridge().getClientService().getBranding(getSelectedConnection());
-			if (branding == null) {
-				log.info(String.format("Removing branding."));
-				if (logoFile != null) {
-					logoFile.delete();
-					logoFile = null;
-				}
-			} else {
-				log.info(String.format("Adding custom branding"));
-				String logo = branding.getLogo();
-				if (StringUtils.isNotBlank(logo)) {
-					log.info(String.format("Attempting to cache logo"));
-					String basename = FilenameUtils.getExtension(logo);
-					if (!basename.equals(""))
-						basename = "." + basename;
-					try {
-						File newLogoFile = File.createTempFile("lpvpnc", "logo" + basename);
-						newLogoFile.deleteOnExit();
-						if (logoFile != null && !newLogoFile.equals(logoFile)) {
-							logoFile.delete();
-						}
+	private void reloadState(Runnable then) {
+		/*
+		 * Care must be take that this doesn't run on the UI thread, as it may take a
+		 * while.
+		 */
+
+		mode = context.getDBus().getVPN().isUpdating() ? UIState.UPDATE : UIState.NORMAL;
+		VPNConnection selectedConnection = getSelectedConnection();
+		if (Client.allowBranding) {
+			branding = getBranding(selectedConnection);
+		}
+		File splashFile = getCustomSplashFile();
+		if (branding == null) {
+			log.info(String.format("Removing branding."));
+			if (logoFile != null) {
+				logoFile.delete();
+				logoFile = null;
+			}
+			splashFile.delete();
+		} else {
+			if (log.isDebugEnabled())
+				log.debug("Adding custom branding");
+			String logo = branding.getLogo();
+			
+			/* Create branded splash */
+			BufferedImage bim = null;
+			Graphics2D graphics = null;
+			if(branding.getResource() != null && StringUtils.isNotBlank(branding.getResource().getBackground())) {
+				bim = new BufferedImage(SPLASH_WIDTH, SPLASH_HEIGHT, BufferedImage.TYPE_INT_ARGB);
+				graphics = (Graphics2D)bim.getGraphics();
+				graphics.setColor(java.awt.Color.decode(branding.getResource().getBackground()));
+				graphics.fillRect(0, 0, SPLASH_WIDTH, SPLASH_HEIGHT);
+			}
+			
+			/* Create logo file */
+			if (StringUtils.isNotBlank(logo)) {
+				File newLogoFile = getCustomLogoFile(selectedConnection);
+				try {
+					if (!newLogoFile.exists()) {
+						log.info(String.format("Attempting to cache logo"));
 						URL logoUrl = new URL(logo);
 						try (InputStream urlIn = logoUrl.openStream()) {
 							try (OutputStream out = new FileOutputStream(newLogoFile)) {
 								urlIn.transferTo(out);
 							}
 						}
-						logoFile = newLogoFile;
-						branding.setLogo(newLogoFile.toURI().toString());
 						log.info(String.format("Logo cached from %s to %s", logoUrl, newLogoFile.toURI()));
-					} catch (Exception e) {
-						log.error(String.format("Failed to cache logo"), e);
-						branding.setLogo(null);
+						newLogoFile.deleteOnExit();
 					}
+					logoFile = newLogoFile;
+					branding.setLogo(logoFile.toURI().toString());
+					
+					/* Draw the logo on the custom splash */
+					if(graphics != null) {
+						log.info(String.format("Drawing logo on splash"));
+						BufferedImage logoImage = ImageIO.read(logoFile);
+						graphics.drawImage(logoImage, ( SPLASH_WIDTH - logoImage.getWidth() ) / 2, ( SPLASH_HEIGHT - logoImage.getHeight() ) / 2, null);
+					}
+					
+				} catch (Exception e) {
+					log.error(String.format("Failed to cache logo"), e);
+					branding.setLogo(null);
+				}
+			} else if (logoFile != null) {
+				logoFile.delete();
+				logoFile = null;
+			}
+			
+			/* Write the splash */
+			if(graphics != null) {
+				try {
+					ImageIO.write(bim, "png", splashFile);
+					log.info(String.format("Custom splash written to %s", splashFile));
+				} catch (IOException e) {
+					log.error(String.format("Failed to write custom splash"), e);
+					splashFile.delete();
 				}
 			}
-		} catch (RemoteException e) {
-			throw new IllegalStateException("Failed to retrieve state from local service.", e);
 		}
+
+		then.run();
+	}
+
+	private File getCustomSplashFile() {
+		File tmpFile;
+		String name = "lbvpnc-splash.png";
+		if (System.getProperty("hypersocket.bootstrap.distDir") == null)
+			tmpFile = new File(new File(System.getProperty("java.io.tmpdir")),
+					System.getProperty("user.name") + "-" + name);
+		else
+			tmpFile = new File(new File(System.getProperty("hypersocket.bootstrap.distDir")).getParentFile(), name);
+		return tmpFile;
+	}
+
+	private File getCustomLogoFile(VPNConnection connection) {
+		File tmpFile;
+		String name = "lpvpnclogo-" + (connection == null ? "default" : connection.getId());
+		if (System.getProperty("hypersocket.bootstrap.distDir") == null)
+			tmpFile = new File(new File(System.getProperty("java.io.tmpdir")),
+					System.getProperty("user.name") + "-" + name);
+		else
+			tmpFile = new File(new File(System.getProperty("hypersocket.bootstrap.distDir")).getParentFile(), name);
+		return tmpFile;
 	}
 
 	private void reapplyColors() {
@@ -1326,26 +1343,23 @@ public class UI extends AbstractController implements Listener {
 		if ((branding == null || StringUtils.isBlank(branding.getLogo())
 				&& !defaultLogo.equals(titleBarImageView.getImage().getUrl()))) {
 			titleBarImageView.setImage(new Image(defaultLogo, true));
-		} else if (branding != null && !defaultLogo.equals(branding.getLogo()) && !StringUtils.isBlank(branding.getLogo())) {
+		} else if (branding != null && !defaultLogo.equals(branding.getLogo())
+				&& !StringUtils.isBlank(branding.getLogo())) {
 			titleBarImageView.setImage(new Image(branding.getLogo(), true));
 		}
 	}
 
-	private void doDisconnect(Connection sel) {
-		rebuildConnections(sel);
-		new Thread() {
-			@Override
-			public void run() {
-				try {
-					context.getBridge().disconnect(sel);
-				} catch (Exception e) {
-					log.error("Failed to disconnect.", e);
-				}
+	private void doDisconnect(VPNConnection sel) {
+		context.getOpQueue().execute(() -> {
+			try {
+				sel.disconnect("");
+			} catch (Exception e) {
+				log.error("Failed to disconnect.", e);
 			}
-		}.start();
+		});
 	}
 
-	private void editConnection(Connection connection) {
+	private void editConnection(VPNConnection connection) {
 		setHtmlPage("editConnection.html");
 		sidebar.setVisible(false);
 	}
@@ -1386,24 +1400,11 @@ public class UI extends AbstractController implements Listener {
 		}
 	}
 
-	private List<ConnectionStatus> getConnections() {
-		try {
-			return context.getBridge().getClientService().getStatus();
-		} catch (RemoteException e) {
-			throw new IllegalStateException(e.getMessage(), e);
-		}
-	}
-
 	private void giveUpWaitingForBridgeEstablish() {
 		LOG.info("Given up waiting for bridge to start");
 		resetAwaingBridgeEstablish();
-		try {
-			context.getBridge().notify(resources.getString("givenUpWaitingForBridgeEstablish"),
-					GUICallback.NOTIFY_ERROR);
-		} catch (RemoteException e) {
-			// Not actually remote
-		}
-		UI.getInstance().setMode(UIState.NORMAL);
+		notify(resources.getString("givenUpWaitingForBridgeEstablish"), ToastType.ERROR);
+		setMode(UIState.NORMAL);
 	}
 
 	/*
@@ -1413,57 +1414,47 @@ public class UI extends AbstractController implements Listener {
 	private void giveUpWaitingForBridgeStop() {
 		LOG.info("Given up waiting for bridge to stop");
 		resetAwaingBridgeLoss();
-		try {
-			context.getBridge().notify(resources.getString("givenUpWaitingForBridgeStop"), GUICallback.NOTIFY_ERROR);
-		} catch (RemoteException e) {
-			// Not actually remote
-		}
-		UI.getInstance().setMode(UIState.NORMAL);
+		notify(resources.getString("givenUpWaitingForBridgeStop"), ToastType.ERROR);
+		setMode(UIState.NORMAL);
 	}
 
-	private void initUi(Connection connection) {
+	private void initUi(VPNConnection connection) {
 		log.info("Rebuilding URIs");
-		if (context.getBridge().isConnected()) {
-			try {
-				rebuildConnections(connection);
-			} catch (Exception e) {
-				log.error("Failed to load connections.", e);
-			}
+		try {
+			rebuildConnections(connection);
+		} catch (Exception e) {
+			log.error("Failed to load connections.", e);
 		}
 		context.applyColors(branding, getScene().getRoot());
 		reapplyLogo();
 	}
 
-	private void joinedNetwork() {
-		log.info("Joined network");
-		setHtmlPage("joined.html");
-	}
-
-	private void rebuildConnections(final Connection sel) {
+	private void rebuildConnections(final VPNConnection sel) {
 		connections.getItems().clear();
-		List<ConnectionStatus> connectionList = context.getBridge().isConnected() ? getConnections() : Collections.emptyList();
-		Connection connected = null;
-		Connection connecting = null;
-		for(ConnectionStatus s : connectionList) {
-			connections.getItems().add(s.getConnection());
-			if(connected == null && s.getStatus() == Type.CONNECTED) {
-				connected = s.getConnection();
+		List<VPNConnection> connectionList = context.getDBus().isBusAvailable() ? context.getDBus().getVPNConnections()
+				: Collections.emptyList();
+		VPNConnection connected = null;
+		VPNConnection connecting = null;
+		for (VPNConnection s : connectionList) {
+			connections.getItems().add(s);
+			Type status = Type.valueOf(s.getStatus());
+			if (connected == null && status == Type.CONNECTED) {
+				connected = s;
 			}
-			if(connecting == null && s.getStatus() == Type.CONNECTING) {
-				connecting = s.getConnection();
+			if (connecting == null && status == Type.CONNECTING) {
+				connecting = s;
 			}
 		}
 		if (sel != null && connections.getItems().contains(sel))
 			connections.getSelectionModel().select(sel);
 		else if (connections.getSelectionModel().isEmpty() && !connections.getItems().isEmpty()) {
 			/* Prefer connected connection */
-			if(connected == null) {
-				if(connecting == null)
+			if (connected == null) {
+				if (connecting == null)
 					connections.getSelectionModel().select(connections.getItems().get(0));
 				else
 					connections.getSelectionModel().select(connecting);
-			}
-			else
+			} else
 				connections.getSelectionModel().select(connected);
 		}
 	}
@@ -1491,37 +1482,36 @@ public class UI extends AbstractController implements Listener {
 		setMode(UIState.NORMAL);
 	}
 
-	private boolean sameHostPortPathCheck(Long conId, Predicate<Long> predicate) {
-		if (predicate.test(conId)) {
-			// show error message
-			return true;
-		}
-		return false;
-	}
-
-	private void selectPageForState(boolean disconnecting, boolean connectIfDisconnected) {
+	private void selectPageForState(boolean connectIfDisconnected, boolean force) {
 		try {
-			Bridge bridge = context.getBridge();
+//			try {
+//				throw new Exception();
+//			}
+//			catch(Exception e) {
+//				log.info("selectPageForState " + connectIfDisconnected, e);
+//			}
+
+			AbstractDBusClient bridge = context.getDBus();
 			if (mode == UIState.UPDATE) {
 				setHtmlPage("updating.html");
-			} else if (bridge.isConnected() && bridge.getClientService().isNeedsUpdating()) {
+			} else if (bridge.isBusAvailable() && bridge.getVPN().isNeedsUpdating()) {
 				/* An update is available */
 				log.warn(String.format("Update is available"));
-				if (Boolean.valueOf(context.getBridge().getConfigurationService()
-						.getValue(ConfigurationService.AUTOMATIC_UPDATES, "true"))) {
+				if (Boolean.valueOf(
+						context.getDBus().getVPN().getValue(ConfigurationRepository.AUTOMATIC_UPDATES, "true"))) {
 					update();
 				} else
 					setHtmlPage("updateAvailable.html");
 			} else {
-				if (bridge.isConnected() && bridge.getClientService().getMissingPackages().length > 0) {
+				if (bridge.isBusAvailable() && bridge.getVPN().getMissingPackages().length > 0) {
 					log.warn(String.format("Missing software packages"));
-					collections.put("packages", Arrays.asList(bridge.getClientService().getMissingPackages()));
+					collections.put("packages", Arrays.asList(bridge.getVPN().getMissingPackages()));
 					setHtmlPage("missingSoftware.html");
 				} else {
-					Connection sel = getSelectedConnection();
+					VPNConnection sel = getSelectedConnection();
 					if (sel == null) {
 						/* There are no connections at all */
-						if (bridge.isConnected()) {
+						if (bridge.isBusAvailable()) {
 							/* The bridge is connected */
 							if (Main.getInstance().isNoAddWhenNoConnections()) {
 								if (Main.getInstance().isConnect()
@@ -1534,16 +1524,26 @@ public class UI extends AbstractController implements Listener {
 						} else
 							/* The bridge is not (yet?) connected */
 							setHtmlPage("index.html");
-					} else if (connectIfDisconnected && !disconnecting && !sel.isAuthorized()) {
-						log.info(String.format("Not authorized, requesting authorize"));
-						authorize(sel);
-					} else if (context.getBridge().getClientService().getStatus(sel) == Type.CONNECTED) {
-						/* We have a connection, a peer configuration and are connected! */
-						log.info(String.format("Connected, so showing join UI"));
-						setHtmlPage("joined.html");
 					} else {
-						log.info(String.format("Disconnected, so showing join UI"));
-						setHtmlPage("join.html", true);
+						Type status = Type.valueOf(sel.getStatus());
+						if (connectIfDisconnected && status != Type.DISCONNECTED && !sel.isAuthorized()) {
+							log.info(String.format("Not authorized, requesting authorize"));
+							authorize(sel);
+						} else if (status == Type.CONNECTING) {
+							/* We have a connection, a peer configuration and are connected! */
+							log.info(String.format("Joining"));
+							setHtmlPage("joining.html", force);
+						} else if (status == Type.CONNECTED) {
+							/* We have a connection, a peer configuration and are connected! */
+							log.info(String.format("Ready, so showing join UI"));
+							setHtmlPage("joined.html", force);
+						} else if (status == Type.DISCONNECTING) {
+							log.info(String.format("Disconnecting, so showing leaving UI"));
+							setHtmlPage("leaving.html", force);
+						} else {
+							log.info(String.format("Disconnected, so showing join UI"));
+							setHtmlPage("join.html", force);
+						}
 					}
 				}
 			}
@@ -1577,10 +1577,12 @@ public class UI extends AbstractController implements Listener {
 	}
 
 	private void showError(String error, Throwable exception) {
-		LOG.error(error, exception);
-		lastException = exception;
-		lastErrorMessage = error;
-		setHtmlPage("error.html");
+		maybeRunLater(() -> {
+			LOG.error(error, exception);
+			lastException = exception;
+			lastErrorMessage = error;
+			setHtmlPage("error.html");
+		});
 	}
 
 	private List<String> toStringList(Section section, String key) {
@@ -1595,15 +1597,9 @@ public class UI extends AbstractController implements Listener {
 	}
 
 	private void update() {
-		new Thread("UpdateThread") {
-			public void run() {
-				try {
-					context.getBridge().getClientService().update();
-				} catch (Exception e) {
-					// Will get error when the service restarts
-				}
-			}
-		}.start();
+		context.getOpQueue().execute(() -> {
+			context.getDBus().getVPN().update();
+		});
 	}
 
 	public static void maybeRunLater(Runnable r) {
@@ -1613,4 +1609,40 @@ public class UI extends AbstractController implements Listener {
 			Platform.runLater(r);
 	}
 
+	public Branding getBranding(VPNConnection connection) {
+		ObjectMapper mapper = new ObjectMapper();
+		Branding branding = null;
+		if (connection != null) {
+			try {
+				branding = getBrandingForConnection(mapper, connection);
+			} catch (IOException ioe) {
+				log.info(String.format("Skipping %s:%d because it appears offline.", connection.getHostname(),
+						connection.getPort()));
+			}
+		}
+		if (branding == null) {
+			for (VPNConnection conx : context.getDBus().getVPNConnections()) {
+				try {
+					branding = getBrandingForConnection(mapper, conx);
+					break;
+				} catch (IOException ioe) {
+					log.info(String.format("Skipping %s:%d because it appears offline.", conx.getHostname(),
+							conx.getPort()));
+				}
+			}
+		}
+		return branding;
+	}
+
+	protected Branding getBrandingForConnection(ObjectMapper mapper, VPNConnection connection)
+			throws UnknownHostException, IOException, JsonProcessingException, JsonMappingException {
+		URL url = new URL(connection.getUri(false) + "/api/brand/info");
+		URLConnection urlConnection = url.openConnection();
+		try (InputStream in = urlConnection.getInputStream()) {
+			Branding brandingObj = mapper.readValue(in, Branding.class);
+			brandingObj.setLogo("https://" + connection.getHostname() + ":" + connection.getPort()
+					+ connection.getPath() + "/api/brand/logo");
+			return brandingObj;
+		}
+	}
 }
